<resources>
    <string name="app_name">LoveLive+</string>
    <string name="action_card">Card</string>
    <string name="action_song">Song</string>
    <string name="action_event">Event</string>
    <string name="action_cf_calculator">CF Calculator</string>
    <string name="action_mf_calculator">MF Calculator</string>
    <string name="action_normal_calculator">Normal Calculator</string>
    <string name="action_sm_calculator">SM Calculator</string>
    <string name="action_clear_data">Clear App Data</string>
    <string name="song_label">Song</string>
    <string name="filter_dialog_title">Filter</string>
    <string name="song_detail_label">Song Detail</string>
    <string name="toast_function_not_complete">Sorry, this is unavailable now.</string>
    <string name="latest_event_name">latest event name</string>
    <string name="latest_event_N_id">latest event N id</string>
    <string name="latest_event_SR_id">latest event SR id</string>
    <string name="max_card_number">max card number</string>
    <string name="card_layout_label">Card</string>
    <string name="card_detail_layout_label">Card Detail</string>
    <string name="card_full_screen_label">Preview</string>
    <string name="event_layout_label">Event</string>
    <string name="event_detail_label">Event Detail</string>
    <string name="default_text">Unknown</string>
    <string name="card_collection_default_text">No Collection</string>
    <string name="card_statistics_default_text">0</string>
    <string name="card_skill_default_text">Unknown skill</string>
    <string name="card_release_date_default_text">Unknown release date</string>
    <string name="card_center_skill_default_text">Unknown center skill</string>
    <string name="card_center_skill_detail_default_text">Unknown center skill detail</string>
    <string name="card_side_center_skill_default_text">Unknown side center skill</string>
    <string name="card_skill_name_default_text">Unknown skill name</string>
    <string name="card_skill_detail_default_text">Unknown skill detail</string>
    <string name="card_collection">Collection:</string>
    <string name="card_max_stat">Max Stat:</string>
    <string name="card_skill_type">Skill Type:</string>
    <string name="skill_healer">Healer</string>
    <string name="skill_perfect_lock">Perfect Lock</string>
    <string name="skill_score_up">Score Up</string>
    <string name="skill_total_yell">Total Yell</string>
    <string name="skill_total_trick">Total Trick</string>
    <string name="skill_total_charm">Total Charm</string>
    <string name="skill_timer_yell">Timer Yell</string>
    <string name="skill_timer_trick">Timer Trick</string>
    <string name="skill_timer_charm">Timer Charm</string>
    <string name="skill_rhythmical_yell">Rhythmical Yell</string>
    <string name="skill_rhythmical_charm">Rhythmical Charm</string>
    <string name="skill_perfect_yell">Perfect Yell</string>
    <string name="skill_perfect_charm">Perfect Charm</string>
    <string name="small_card_collection_title">Collection:</string>
    <string name="small_card_max_stat_title">Max Stat:</string>
    <string name="small_card_skill_type_title">Skill Type:</string>
    <string name="first_download_tips">Download all the data may need 3 to 5 minutes at the first time.</string>
    <string name="download_song_tips">Download all the song data may need 1 minute at the first time.</string>
    <string name="max_card_number_default">0</string>
    <string name="event_default_value">0</string>
    <string name="medley_festival_calculator_label">MF Calculator</string>
    <string name="normal_calculator_label">Normal Calculator</string>
    <string name="sm_calculator_label">SM Calculator</string>
    <string name="objective_points">Objective Points</string>
    <string name="current_points">Current Points</string>
    <string name="current_rank">Current Rank</string>
    <string-array name="song_amount">
        <item>3</item>
        <item>2</item>
        <item>1</item>
    </string-array>
    <string-array name="difficulty">
        <item>Expert</item>
        <item>Hard</item>
        <item>Normal</item>
        <item>Easy</item>
    </string-array>
    <string name="advanced_options">Advanced Options</string>
    <string name="event_time">Event Time</string>
    <string name="wasted_lp_every_day">Wasted LP Every Day</string>
    <string name="event_points_addition">Pt Addition</string>
    <string name="experience_addition">Exp Addition</string>
    <string-array name="song_rank">
        <item>S</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>-</item>
    </string-array>
    <string name="song_rank_addition_ratio">Addition Ratio:</string>
    <string-array name="combo_rank">
        <item>S</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>-</item>
    </string-array>
    <string name="combo_rank_addition">Addition:</string>
    <string name="current_lp">Current LP</string>
    <string name="current_experience">Current Exp</string>
    <string name="event_end_time">Event End Time</string>
    <string name="event_last_time">Event Last Time</string>
    <string name="day_unit">Day(s)</string>
    <string name="hour_unit">Hour(s)</string>
    <string name="minute_unit">Min(s)</string>
    <string name="calculate">Calculate</string>
    <string name="necessary_loveca">Necessary Loveca</string>
    <string name="final_points">Final Points</string>
    <string name="final_rank">Final Rank</string>
    <string name="final_experience">Final Experience</string>
    <string name="final_lp">Final LP</string>
    <string name="final_item">Final Item</string>
    <string name="play_frequency">Play Frequency</string>
    <string name="event_play_frequency">Event Frequency</string>
    <string name="play_time">Total Play Time</string>
    <string name="play_time_ratio">Play Time Ratio</string>
    <string name="calculation_report_default">-</string>
    <string name="result_report">Report</string>
    <string name="consume_lp">Consume LP:</string>
    <string-array name="normal_difficulty">
        <item>Expert</item>
        <item>Hard</item>
        <item>Normal</item>
        <item>Easy</item>
        <item>4×Expert</item>
        <item>4×Hard</item>
        <item>4×Normal</item>
        <item>4×Easy</item>
    </string-array>
    <string name="event_song_rank">E-Rank</string>
    <string name="event_song_combo">E-Combo</string>
    <string name="once_points">Points:</string>
    <string name="event_song_difficulty">E-Difficulty</string>
    <string name="current_item">Current Item</string>
    <string-array name="play_rank">
        <item>Avg.</item>
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
        <item>4th</item>
    </string-array>
    <string name="average">Avg.</string>
    <string name="first_place">1st</string>
    <string name="second_place">2nd</string>
    <string name="third_place">3rd</string>
    <string name="forth_place">4th</string>
    <string name="default_rank">2</string>
    <string name="feed_guide">Feed Guide</string>
    <string name="save_image_success_msg">Image saved successfully</string>
    <string name="daily_rotation">DAILY</string>
    <string name="song_duration">Duration</string>
    <string name="second_unit">s</string>
    <string name="song_bpm">BPM</string>
    <string name="smileAttribute">Smile</string>
    <string name="pureAttribute">Pure</string>
    <string name="coolAttribute">Cool</string>
    <string name="clear_app_data_successfully">Clear App data successfully.</string>
    <string name="coming_soon">Coming soon…</string>
    <string-array name="rarity_array">
        <item>Rarity</item>
        <item>N</item>
        <item>R</item>
        <item>SR</item>
        <item>SSR</item>
        <item>UR</item>
    </string-array>
    <string-array name="attribute_array">
        <item>Attribute</item>
        <item>Smile</item>
        <item>Pure</item>
        <item>Cool</item>
    </string-array>
    <string-array name="grade_array">
        <item>Grade</item>
        <item>First</item>
        <item>Second</item>
        <item>Third</item>
    </string-array>
    <string-array name="idol_array">
        <item>Idol</item>
        <item>高坂穂乃果</item>
        <item>南ことり</item>
        <item>園田海未</item>
        <item>小泉花陽</item>
        <item>西木野真姫</item>
        <item>星空凛</item>
        <item>東條希</item>
        <item>矢澤にこ</item>
        <item>絢瀬絵里</item>
        <item>津島善子</item>
        <item>国木田花丸</item>
        <item>黒澤ルビィ</item>
        <item>高海千歌</item>
        <item>桜内梨子</item>
        <item>渡辺曜</item>
        <item>小原鞠莉</item>
        <item>黒澤ダイヤ</item>
        <item>松浦果南</item>
    </string-array>
    <string-array name="sub_team_array">
        <item>Sub-Team</item>
        <item>Printemps</item>
        <item>BiBi</item>
        <item>Lily White</item>
        <item>CYaRon！</item>
        <item>AZALEA</item>
        <item>Guilty Kiss</item>
    </string-array>
    <string-array name="skill_type_array">
        <item>Skill Type</item>
        <item>Score Up</item>
        <item>Perfect Lock</item>
        <item>Healer</item>
    </string-array>
    <string-array name="is_event_card_or_not">
        <item>Event Card</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="is_promo_or_not">
        <item>Promo Card</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="collection_array">
        <item>Collection</item>
        <item>チアリーダー</item>
        <item>誕生石編</item>
        <item>ハロウィーン編</item>
        <item>浴衣編</item>
        <item>プール編</item>
        <item>水着編</item>
        <item>小悪魔編</item>
        <item>アイドル衣装編</item>
        <item>踊り子編</item>
        <item>ベースボール編</item>
        <item>大正ロマン編</item>
        <item>妖精の国編</item>
        <item>サーカス編</item>
        <item>クリスマス編</item>
        <item>舞踏会編</item>
        <item>動物編part2</item>
        <item>くのいち編</item>
        <item>マリン編</item>
        <item>手品師編</item>
        <item>サイバー編</item>
        <item>職業編Part2</item>
        <item>ホワイトデー編</item>
        <item>バレンタイン編</item>
        <item>七福神編</item>
        <item>雪山編</item>
        <item>星座編</item>
        <item>ハロウィン編</item>
        <item>カフェメイド編</item>
        <item>チャイナドレス編</item>
        <item>7月編</item>
        <item>6月編</item>
        <item>5月編</item>
        <item>4月編</item>
        <item>3月編</item>
        <item>2月編</item>
        <item>1月編</item>
        <item>12月編</item>
        <item>11月編</item>
        <item>10月編</item>
        <item>9月編</item>
        <item>8月編</item>
        <item>動物編</item>
        <item>職業編</item>
        <item>初期</item>
    </string-array>
    <string-array name="first_grade_member">
        <item>小泉花陽</item>
        <item>星空凛</item>
        <item>西木野真姫</item>
        <item>津島善子</item>
        <item>国木田花丸</item>
        <item>黒澤ルビィ</item>
    </string-array>
    <string-array name="second_grade_member">
        <item>高坂穂乃果</item>
        <item>南ことり</item>
        <item>園田海未</item>
        <item>高海千歌</item>
        <item>桜内梨子</item>
        <item>渡辺曜</item>
    </string-array>
    <string-array name="third_grade_member">
        <item>東條希</item>
        <item>矢澤にこ</item>
        <item>絢瀬絵里</item>
        <item>小原鞠莉</item>
        <item>黒澤ダイヤ</item>
        <item>松浦果南</item>
    </string-array>
    <string-array name="printemps_member">
        <item>高坂穂乃果</item>
        <item>南ことり</item>
        <item>小泉花陽</item>
    </string-array>
    <string-array name="bibi_member">
        <item>矢澤にこ</item>
        <item>絢瀬絵里</item>
        <item>西木野真姫</item>
    </string-array>
    <string-array name="lily_white_member">
        <item>東條希</item>
        <item>星空凛</item>
        <item>園田海未</item>
    </string-array>
</resources>