<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/necessary_loveca"
            android:textSize="@dimen/text_size_default" />

        <TextView
            android:id="@+id/necessary_loveca_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculation_report_default"
            android:textSize="@dimen/text_size_default" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/final_points"
            android:textSize="@dimen/text_size_default" />

        <TextView
            android:id="@+id/final_points_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculation_report_default"
            android:textSize="@dimen/text_size_default" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/final_rank"
            android:textSize="@dimen/text_size_default" />

        <TextView
            android:id="@+id/final_rank_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculation_report_default"
            android:textSize="@dimen/text_size_default" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/final_experience"
            android:textSize="@dimen/text_size_default" />

        <TextView
            android:id="@+id/final_experience_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculation_report_default"
            android:textSize="@dimen/text_size_default" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/play_frequency"
            android:textSize="@dimen/text_size_default" />

        <TextView
            android:id="@+id/play_frequency_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculation_report_default"
            android:textSize="@dimen/text_size_default" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/play_time"
            android:textSize="@dimen/text_size_default" />

        <TextView
            android:id="@+id/total_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculation_report_default"
            android:textSize="@dimen/text_size_default" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/play_time_ratio"
            android:textSize="@dimen/text_size_default" />

        <TextView
            android:id="@+id/play_time_ratio_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculation_report_default"
            android:textSize="@dimen/text_size_default" />

    </LinearLayout>
</LinearLayout>